[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-enhancement-tool"
version = "0.1.0"
description = "Image Enhancement Tool using Latent Diffusion Models and ControlNet"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=2.14.0,<3.0.0",
    "diffusers",
    "evaluate>=0.4.6",
    "gradio>=6.3.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.0",
    "numpy>=2.4.0",
    "pandas>=2.3.0",
    "pillow>=10.4.0",
    "pydantic>=2.12.0",
    "PyYAML>=6.0.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.0",
    "streamlit>=1.53.0",
    "tokenizers>=0.22.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.0",
    "transformers>=4.57.0",
    "wandb>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.5.0",
    "jupytext>=1.19.0",
    "notebook>=7.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
